fixed gap

--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -266,7 +266,6 @@
 }
 
 .footer .social-media-list ul {
-  margin-top: 0;
   margin-bottom: 0;
   display: flex;
   border-bottom: none;
